--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "electron .",
-    "electron-build": "ng build --prod && electron ."
+    "electron-build": "ng build && electron . --base-href /CTEP-electron/dist/",
+    "electron-build-prod": "ng build --prod && electron . "
   },
   "private": true,
   "dependencies": {
@@ -52,6 +53,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack": "^4.16.2"
   }
 }
