--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/primeng/resources/themes/cruze/theme.css",
+              "src/assets/css/cruze/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/styles.css"
             ],
             "scripts": []
           },
