--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "latest": "^0.2.0",
     "ngx-bootstrap": "^3.0.1",
+    "nodejs": "0.0.0",
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.1",
     "rxjs": "^6.0.0",
