--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/jquery-mask-plugin": "^1.14.3",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "jquery-mask-plugin": "^1.14.15",
     "latest": "^0.2.0",
     "ngx-bootstrap": "^3.0.1",
     "nodejs": "0.0.0",
