--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jquery-mask-plugin": "^1.14.3",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
+    "electron-log": "^2.2.17",
     "jquery": "^3.3.1",
     "jquery-mask-plugin": "^1.14.15",
     "latest": "^0.2.0",
