--- a/ctep-electron/tsconfig.json
+++ b/ctep-electron/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compileOnSave": false,
+  "enableIvy": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -11,7 +12,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
+     "lib": [
       "es2018",
       "dom"
     ]
