--- a/ctep-electron/package.json
+++ b/ctep-electron/package.json
@@ -20,10 +20,12 @@
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
     "@angular/material": "9.2.4",
+    "@angular/material-moment-adapter": "^10.1.0",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "angular2-text-mask": "^9.0.0",
+    "moment": "^2.27.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
