--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-text-mask": "^9.0.0",
     "moment": "^2.27.0",
     "rxjs": "~6.5.4",
+    "text-mask-addons": "^3.8.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
