--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             "main": "src/bootstrap.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "extractCss": true,
             "aot": true,
             "assets": [
               "src/favicon.ico",
