--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Secretaria Fácil - CTEP",
     "main": "src/index.ts",
     "scripts": {
-        "build": "ng build --base-href ./",
+        "build": "ng build --base-href ./ --extract-css",
         "build:prod": "npm run build -- -c production",
         "build:start": "npm run build && electron-forge start",
         "start": "electron-forge start",
@@ -87,6 +87,7 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "codelyzer": "^5.1.2",
+        "electron": "^11.3.0",
         "electron-forge": "^5.2.4",
         "electron-prebuilt-compile": "8.2.0",
         "jasmine-core": "~3.5.0",
