--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "electron-compile": "^6.4.4",
         "electron-devtools-installer": "^2.1.0",
         "electron-squirrel-startup": "^1.0.0",
+        "file-saver": "^2.0.5",
         "moment": "^2.27.0",
         "ngx-electron": "^2.2.0",
         "reflect-metadata": "^0.1.9",
