pequenas correções visuais

--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
         "electron-devtools-installer": "^2.1.0",
         "electron-squirrel-startup": "^1.0.0",
         "file-saver": "^2.0.5",
+        "jquery": "^3.6.0",
         "moment": "^2.27.0",
         "ngx-electron": "^2.2.0",
         "reflect-metadata": "^0.1.9",
         "rxjs": "~6.5.4",
+        "save": "^2.4.0",
         "text-mask-addons": "^3.8.0",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
@@ -83,6 +85,7 @@
         "@electron-forge/maker-wix": "^6.0.0-beta.54",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
+        "@types/jquery": "^3.5.5",
         "@types/node": "^12.11.1",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-preset-env": "^1.7.0",
