--- a/package.json
+++ b/package.json
@@ -58,18 +58,21 @@
         "@angular/compiler": "~9.0.6",
         "@angular/core": "~9.0.6",
         "@angular/forms": "~9.0.6",
+        "@angular/localize": "^9.1.13",
         "@angular/material": "9.2.4",
         "@angular/material-moment-adapter": "^10.1.0",
         "@angular/platform-browser": "~9.0.6",
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
         "angular2-text-mask": "^9.0.0",
+        "chart.js": "^2.6.0",
         "electron-compile": "^6.4.4",
         "electron-devtools-installer": "^2.1.0",
         "electron-squirrel-startup": "^1.0.0",
         "file-saver": "^2.0.5",
         "jquery": "^3.6.0",
         "moment": "^2.27.0",
+        "ng2-charts": "^1.6.0",
         "ngx-electron": "^2.2.0",
         "reflect-metadata": "^0.1.9",
         "rxjs": "~6.5.4",
