--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
         "@angular/compiler": "~9.0.6",
         "@angular/core": "~9.0.6",
         "@angular/forms": "~9.0.6",
+        "@angular/localize": "~9.0.6",
         "@angular/material": "9.2.4",
-        "@angular/material-moment-adapter": "^10.1.0",
+        "@angular/material-moment-adapter": "9.2.4",
         "@angular/platform-browser": "~9.0.6",
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
         "angular2-text-mask": "^9.0.0",
+        "chart.js": "^2.9.3",
         "electron-compile": "^6.4.4",
         "electron-devtools-installer": "^2.1.0",
         "electron-squirrel-startup": "^1.0.0",
@@ -71,6 +73,7 @@
         "jquery": "^3.6.0",
         "jwt-decode": "^3.1.2",
         "moment": "^2.27.0",
+        "ng2-charts": "^2.4.2",
         "ngx-electron": "^2.2.0",
         "reflect-metadata": "^0.1.9",
         "rxjs": "~6.5.4",
