Ajustando estilos da aplicação (white label)

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
             },
             "electronPackagerConfig": {
                 "dir": "./src",
-                "packageManager": "yarn"
+                "packageManager": "yarn",
+                "icon": "./src/favicon.ico"
             },
             "electronWinstallerConfig": {
                 "name": "build_electron"
